--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI-Powered Website Building Guide</title>
+    <title>Want to Build a Website With AI—Fast and Easy? Here's How.</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="description" content="Learn how to build a professional website using AI tools and best practices" />
+    <meta
+      name="description"
+      content="Launch your own website in minutes with AI. No code. No stress. Just a clear, simple guide to get you started today."
+    />
     <meta name="theme-color" content="#2563EB" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
